# YAN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: YANException.h  YetAnotherNotepad.h
include/events/: EventManager.h
include/files/: FileContent.h  FileInfo.h  FileManager.h
include/files/exceptions/: FilesExceptions.h
include/files/factories/: FileInfoFactory.h
include/gui/frames/: MainFrame.h
src/: CMakeLists.txt  YANException.cpp  YetAnotherNotepad.cpp  main.cpp
src/events/: EventManager.cpp
src/files/: FileContent.cpp  FileInfo.cpp  FileManager.cpp
src/files/exceptions/: FileExceptions.cpp
src/files/factories/: FileInfoFactory.cpp
src/gui/frames/: MainFrame.cpp
